# viteff

./: .gitignore  README.md  pyproject.toml  train.py
runs/: imagenet_s16_e90.toml  sanity_check.toml
src/: attention.py  augmentation.py  config.py  curriculum.py  dataloader.py  encoding.py  hooks.py  models.py  optimization.py  patchifier.py  utils.py
src/heads/: classification.py  segmentation.py
