[project]
name = "viteff"
version = "0.1.0"
description = "Fast ViT training"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "pydantic-settings>=2.13.1",
    "spdl>=0.3.1",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchao>=0.17.0",
    "torchvision>=0.26.0",
    "trackio[gpu]>=0.23.0",
    "webdataset>=1.0.2",
    "flash-attn-4[cu13]",
]

[dependency-groups]
dev = ["hf>=1.11.0", "ipython>=9.12.0", "ruff>=0.15.11"]

[tool.ruff.lint]
ignore = ["E402"]
